clutter/gdk/clutter-backend-gdk.c
@@ -23,6 +23,8 @@
 #include "config.h"
 #endif
 
+#define CLUTTER_ENABLE_EXPERIMENTAL_API
+
 #include <glib/gi18n-lib.h>
 
 #include <string.h>
@@ -82,6 +84,29 @@ G_DEFINE_TYPE (ClutterBackendGdk, clutter_backend_gdk, CLUTTER_TYPE_BACKEND);
 static GdkDisplay  *_foreign_dpy = NULL;
 
 static gboolean disable_event_retrieval = FALSE;
+
+void
+_clutter_backend_gdk_reset_framebuffer (ClutterBackendGdk *backend_gdk)
+{
+  if (backend_gdk->dummy_onscreen == COGL_INVALID_HANDLE)
+    {
+      CoglContext *context =
+        clutter_backend_get_cogl_context (CLUTTER_BACKEND (backend_gdk));
+      CoglError *internal_error = NULL;
+
+      backend_gdk->dummy_onscreen = cogl_onscreen_new (context, 1, 1);
+
+      if (!cogl_framebuffer_allocate (COGL_FRAMEBUFFER (backend_gdk->dummy_onscreen),
+                                      &internal_error))
+        {
+          g_error ("Unable to create dummy onscreen: %s", internal_error->message);
+          cogl_error_free (internal_error);
+          return;
+        }
+    }
+
+  cogl_set_framebuffer (COGL_FRAMEBUFFER (backend_gdk->dummy_onscreen));
+}
 
 static void
 clutter_backend_gdk_init_settings (ClutterBackendGdk *backend_gdk)
@@ -225,6 +250,8 @@ static void
 clutter_backend_gdk_finalize (GObject *gobject)
 {
   ClutterBackendGdk *backend_gdk = CLUTTER_BACKEND_GDK (gobject);
+
+  g_clear_pointer (&backend_gdk->dummy_onscreen, cogl_object_unref);
 
   gdk_window_remove_filter (NULL, cogl_gdk_filter, backend_gdk);
   g_object_unref (backend_gdk->display);
@@ -413,7 +440,7 @@ clutter_backend_gdk_class_init (ClutterBackendGdkClass *klass)
 static void
 clutter_backend_gdk_init (ClutterBackendGdk *backend_gdk)
 {
-  /* nothing to do here */
+  backend_gdk->dummy_onscreen = COGL_INVALID_HANDLE;
 }
 
 /**
